# vending-machine-api

./: README.md  pyproject.toml
vending_machine_api/: manage.py
vending_machine_api/products/: models.py  policies.py  serializers.py  utils.py  views.py
vending_machine_api/products/migrations/: 0001_initial.py
vending_machine_api/users/: admin.py  const.py  models.py  policies.py  serializers.py  views.py
vending_machine_api/users/migrations/: 0001_initial.py
vending_machine_api/vending_machine_api/: asgi.py  settings.py  urls.py  wsgi.py
